--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "app",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "main": "nodemon server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.2",
+    "dotenv": "^10.0.0",
     "body-parser": "^1.20.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.3"
-  }
+    "express": "^4.17.3",
+    "https": "^1.0.0"
+  },
+  "devDependencies": {},
+  "description": ""
 }
