--- a/package.json
+++ b/package.json
@@ -11,12 +11,27 @@
   "license": "ISC",
   "dependencies": {
     "@paypal/checkout-server-sdk": "^1.0.2",
-    "dotenv": "^10.0.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "connect-mongo": "^4.6.0",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
-    "https": "^1.0.0"
+    "express-session": "^1.17.3",
+    "express-validator": "^6.14.0",
+    "https": "^1.0.0",
+    "md5": "^2.3.0",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.3.3",
+    "mongoose-encryption": "^2.1.2",
+    "mongoose-findorcreate": "^3.0.0",
+    "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2",
+    "passport-oauth2": "^1.6.1",
+    "swagger-ui-express": "^4.4.0"
   },
-  "devDependencies": {},
   "description": ""
 }
